--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,14 @@
     width: 50%;
     margin: auto;
 }
+
+#searchdata{
+    width: 560px;
+    height: 500px;
+    background-color:rgb(255, 248, 238);
+    border: 2px solid black;
+    border-radius: 20px;
+    margin: auto;
+    margin-top: 30px;
+    padding: 60px;
+}
